--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,7 @@ on:
 env:
   TAG: ${{ github.ref_name }}
   GHCR_REGISTRY: ghcr.io
+  ORG: absaoss
 
 jobs:
   build:
@@ -34,21 +35,6 @@ jobs:
         password: ${{ secrets.GITHUB_TOKEN }}
     - name: Build and push docker image to ghcr.io
       run: make docker-build-and-push TAG=${{ env.TAG }} REGISTRY=${{ env.GHCR_REGISTRY }}
-    - name: Read prime registry secrets
-      uses: rancher-eio/read-vault-secrets@main
-      with:
-        secrets: |
-          secret/data/github/repo/${{ github.repository }}/rancher-prime-registry/credentials username |  PRIME-REGISTRY-USERNAME;
-          secret/data/github/repo/${{ github.repository }}/rancher-prime-registry/credentials password |  PRIME-REGISTRY-PASSWORD;
-          secret/data/github/repo/${{ github.repository }}/rancher-prime-registry/credentials registry |  PRIME-REGISTRY-REGISTRY;
-    - name: Docker login to prime registry
-      uses: docker/login-action@v3
-      with:
-        registry: ${{ env.PRIME-REGISTRY-REGISTRY }}
-        username: ${{ env.PRIME-REGISTRY-USERNAME }}
-        password: ${{ env.PRIME-REGISTRY-PASSWORD }}
-    - name: Build and push docker image to prime registry
-      run: make docker-build-and-push TAG=${{ env.TAG }} REGISTRY=${{ env.PRIME-REGISTRY-REGISTRY }}
   release:
     runs-on: ubuntu-latest
     permissions:
